--- a/app/views/linked_in/index.html.haml
+++ b/app/views/linked_in/index.html.haml
@@ -1,7 +1,7 @@
 .container
   %h1 LinkedIn#index
   %p Find me in app/views/linked_in/index.html.haml
-  = link_to 'https://www.linkedin.com/uas/oauth2/authorization?response_type=code&client_id=758rlot27c5c8k&scope=r_fullprofile&state=DCEEFWF45453sdffef424&redirect_uri=http://localhost:3000' do
+  = link_to 'https://www.linkedin.com/uas/oauth2/authorization?response_type=code&client_id=758rlot27c5c8k&scope=r_fullprofile+r_contactinfo&state=DCEEFWF45453sdffef424&redirect_uri=http://localhost:3000' do
     %i.fa.fa-linkedin{style: "font-size: 32px;"}
   = link_to '/auth/facebook' do
     %i.fa.fa-facebook-square{style: "font-size: 32px;"}
@@ -19,6 +19,14 @@
         %br
         %b Facebook Page:
         = link_to @fb_profile.get_object("me")["link"], @fb_profile.get_object("me")["link"], target: '_blank'
+        %br
+        %b Summary:
+        %br
+        = @li_profile["person"]["summary"]
+        %br
+        %br
+        %br
+        = link_to 'more info', '', class: 'btn btn-primary pull-right'
     %p.bg-primary.text-center EXPERIENCE
     - @positions.each do |p|
       %b Title:
