--- a/app/views/linked_in/index.html.haml
+++ b/app/views/linked_in/index.html.haml
@@ -1,6 +1,4 @@
 .container
-  %h1 LinkedIn#index
-  %p Find me in app/views/linked_in/index.html.haml
   = link_to 'https://www.linkedin.com/uas/oauth2/authorization?response_type=code&client_id=758rlot27c5c8k&scope=r_fullprofile+r_contactinfo&state=DCEEFWF45453sdffef424&redirect_uri=http://localhost:3000' do
     %i.fa.fa-linkedin{style: "font-size: 32px;"}
   = link_to '/auth/facebook' do
@@ -26,30 +24,5 @@
         %br
         %br
         %br
-        = link_to 'more info', '', class: 'btn btn-primary pull-right'
-    %p.bg-primary.text-center EXPERIENCE
-    - @positions.each do |p|
-      %b Title:
-      = p["title"]
-      %br
-      %b Company
-      = p["company"]["name"]
-      %br
-      %b Start Date:
-      = "#{month_name(p['start_date']['month'])}, #{p['start_date']['year']}"
-      - if p["is_current"] == 'false'
-        %br
-        %b End Date:
-        = "#{month_name(p['end_date']['month'])}, #{p['end_date']['year']}"
-      %br
-      %br
-      = p["summary"]
-      %hr
-    %p.bg-primary.text-center SKILLS
-    .container
-      - @skills.each_slice(2) do |skill|
-        .row
-          .col-md-6
-            = skill[0]["skill"]["name"]
-          .col-md-6
-            = skill[1]["skill"]["name"] if skill[1]
+        = link_to 'more info', linked_in_fb_log_path, class: 'btn btn-primary pull-right', remote: true
+    = render 'page1'
